# theta-protocol

./: BENCHMARK_SUMMARY.md  Cargo.toml  IROH_IMPLEMENTATION.md  iroh_counter.rs  iroh_stream_dev.rs  iroh_test.rs  oneshot_comparison.rs
benches/: codec_benchmarks.rs
examples/: real_codec_analysis.rs  run_benchmarks.rs
src/: base.rs  codec.rs  connection.rs  core.rs  dto.rs  error.rs  lib.rs  protocol.rs
src/codec/: mod.rs  performance_tests.rs  postcard_prefix.rs
src/implementations/: iroh.rs  mod.rs
