[package]
name = "theta-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-compact = { version = "2", default-features = false, features = [] }
futures = { version = "0.3.31", default-features = false }
rustc-hash = { version = "2.1.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

hashbrown = { version = "0.15.4", default-features = false, optional = true }

[features]
# todo Change default to be "std", setting "alloc" for development purposes
default = ["alloc"]
# default = ["std"]
std = ["alloc", "futures/std", "rustc-hash/std", "serde/std"]
alloc = ["futures/alloc", "hashbrown/alloc", "serde/alloc"]
