[package]
name = "theta-protocol"
version = "0.1.0"
edition = "2024"

[features]
# todo Change default to be "std", setting "alloc" for development purposes
default = ["full"]

full = ["std", "codec", "iroh"]

std = ["alloc", "futures/std", "rustc-hash/std", "serde/std"]
alloc = ["futures/alloc", "hashbrown/alloc", "serde/alloc"]

# Implementation
codec = ["std", "postcard", "tokio-util", "bytes", "tokio"]
iroh = ["std", "dep:iroh"]


[dependencies]
ed25519-compact = { version = "2", default-features = false, features = [] }
futures = { version = "0.3.31", default-features = false }
rustc-hash = { version = "2.1.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

hashbrown = { version = "0.15.4", default-features = false, optional = true }
url = { version = "2.5.4", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"], optional = true }
tokio-util = { version = "0.7.16", features = ["codec"], optional = true }
bytes = { version = "1.10.1", optional = true }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "time",
    "sync",
], optional = true }
iroh = { version = "0.91.1", optional = true }
futures-lite = "2.6.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }

[[bench]]
name = "codec_benchmarks"
harness = false
